@@ -3,6 +3,9 @@ Revision history for DateTimeX-Start
 1.6.0   ~~~~-~~-~~
         - Optimized based on the assumption that most calls will be for days
           with a midnight and only one midnight.
+        - Now croaks rather than returning the wrong answer when a DateTime
+          can't be found. This will never happen if the documented assumptions
+          are correct.
         - Minor documentation improvements.
         - ~~~
 
